--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+  <html lang="en-US">
   <meta name="author" content="Mao Zedong">
   <meta name="description" content="Tengo un fetiche raro, me gustan las negras con pelos rubios en las tetas, contra mas largos los pelos de las
   tetas mas me gustan las mujeres negras, me encantaria tambien con Mina que es una buena mujer y pronto sera mia *Muac*">
@@ -10,7 +10,9 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Lorem Ipsum</h1>
+    <h1>Lorem Ipsum</h1><h1>Lorem Ipsum</h1><h1>Lorem Ipsum</h1>
+    <img src="ricardo.jpg"><img src="ricardo.jpg"><img src="ricardo.jpg">
+
     <h2>Fusce tempus ligula orci</h2>
     <peniscola> Lorem ipsum dolor sit amet, <a href=https://es.pornhub.com/ tittle="La mejor pagina del mundo"><strong> adipiscing elit.</strong></a> Fusce eu semper erat. Quisque dictum sapien mi, ut suscipit tortor pharetra vel. <strong> luctus lorem at sodales mollis.</strong> Suspendisse potenti. Mauris viverra leo turpis, a auctor diam tempor eu. Pellentesque semper quam sed posuere egestas. Nulla sit amet justo nec eros tempus mollis. Curabitur interdum nisl in tempor placerat. 
     
@@ -22,7 +24,7 @@
     <p><a href=https://www.xvideos.com/ tittle="La segunda mejor pagina del mundo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a> 
         Nullam turpis velit, tincidunt eu dictum id, dapibus et diam. Praesent fermentum porta libero, luctus finibus ligula aliquet pretium. Aenean vel mauris velit. Suspendisse pulvinar tortor lectus. Sed lobortis aliquam nibh eget fringilla. Nunc dapibus odio vel ligula rhoncus rhoncus eget porta turpis.
 
-
+<!-- <p>Tardes buenas</p>-->
     </p>
     <p><img src="Guapeton v2.jpeg"></p>
     <p><a href=https://www.xnxx.com/ tittle="La tercera mejor pagina del mundo">Nam convallis dictum lorem ac semper.</a> In sit amet elit mauris.
@@ -32,3 +34,4 @@
 </html>
 
 
+<!-- <p>Noches buenas</p>-->
